[project]
name = "hello-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "maybe_dog", email = "sa990130@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
